# peoplecounter

./: CMakeLists.txt  README.md  colorHSVtrackbar.cpp  colorHSVtrackbar.h  detectObjects.cpp  detectObjects.h  detectionoutput.yml  main.cpp  makefile  thresholding.cpp  thresholding.h
hogcreatesmpl/: CMakeLists.txt  main.cpp
hogpedestrians/: CMakeLists.txt  detectionoutput.yml  main.cpp
hogtest/: CMakeLists.txt  main.cpp
hogtestimg/: CMakeLists.txt  main.cpp
hogteststream/: CMakeLists.txt  demo808.avi  demo811.avi  getDetector.hpp  main.cpp
